--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -8,6 +8,12 @@
             android:id="@+id/nav_map"
             android:icon="@drawable/ic_place_black_24dp"
             android:title="Back to maps" />
+
+        <item
+            android:id="@+id/nav_fav"
+            android:icon="@drawable/ic_favorite_white_24dp"
+            android:title="Favourites" />
+
         <item
             android:id="@+id/nav_sign_out"
             android:icon="@drawable/ic_exit_to_app_black_24dp"
