Users are able to freely remove favourited items by swiping left.
Users are able to remove cart items by swiping as well.
However, i encountered and issue which involves the recycler view. There are 2 activities using the same recycler view thus the app crashes when it doesn't know which views to assign. This is resolved by clearing the view in the cartAdapter class and then updating it notifying the changes to the dataset.

*Resolved*

--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/rootLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/my_bg"
@@ -11,6 +12,7 @@
     <Button
         android:id="@+id/btn_place_order"
         android:text="Place Order"
+
         android:background="@color/colorPrimaryDark"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
