--- a/app/src/main/res/layout/activity_favourite_list.xml
+++ b/app/src/main/res/layout/activity_favourite_list.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/rootLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/my_bg"
@@ -12,7 +13,6 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_fav"
-        android:layout_above="@+id/btn_place_order"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
