Added braintree payment, users can now use paypal or credit/debit cards to make payment in the cart
*Resolved issues*
- orders cannot be sent to the SQL on the webserver.

--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -12,7 +12,7 @@
     <Button
         android:id="@+id/btn_place_order"
         android:text="Place Order"
-
+        android:enabled="false"
         android:background="@color/colorPrimaryDark"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
