--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -15,6 +15,12 @@
             android:title="Favourites" />
 
         <item
+            android:id="@+id/nav_show_orders"
+            android:icon="@drawable/ic_attach_money_black_24dp"
+            android:title="Your orders"
+            />
+
+        <item
             android:id="@+id/nav_sign_out"
             android:icon="@drawable/ic_exit_to_app_black_24dp"
             android:title="Log Out" />
